fix: overflow issue and gap between name and picture

--- a/components/interactables/QuickProfile/QuickProfile.less
+++ b/components/interactables/QuickProfile/QuickProfile.less
@@ -20,7 +20,7 @@
   .top {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 12px;
 
     .open-profile-button {
       cursor: default;
@@ -28,6 +28,10 @@
       &.self {
         cursor: pointer;
       }
+    }
+
+    .text-container {
+      overflow: hidden;
     }
   }
   .row-wrapper {
